--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.main.show_banner=false
 
 baidu.accessKey=xN3Lv2liVPWHfu5ywr0UPWoT
 baidu.secretKey=L7Yc5LOT2SgYtZidaN0eHFQ1ZLLnGh8c
-baidu.endPoint=bcs.duapp.com
+baidu.endPoint=http://bj.bcebos.com
 baidu.bucket=dionysus-files
