--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.security.enabled=false
 spring.datasource.sql-script-encoding=UTF-8
 spring.main.show_banner=false
 
-baidu.accessKey=xN3Lv2liVPWHfu5ywr0UPWoT
-baidu.secretKey=L7Yc5LOT2SgYtZidaN0eHFQ1ZLLnGh8c
+baidu.accessKey=9OLicojAlA50C2GqGIxNzvTN
+baidu.secretKey=2YSGemQjeWijKGP2WcUQYQWqpAGquLKR
 baidu.endPoint=http://bj.bcebos.com
-baidu.bucket=dionysus-files
+baidu.bucket=huixinpn
