--- a/dionysus-core/src/main/resources/application-prod.properties
+++ b/dionysus-core/src/main/resources/application-prod.properties
@@ -2,12 +2,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 
-bae.appid=8ca52017a2a1418481ce63a9c33ee947
-bae.secretkey=7a907f719566409fa8a460316d82a463
-bae.mysqldb=menpvSHTvDJwZDlnGERW
+bae.appid=huixinpn
+bae.secretkey=1Qaz2wsx3edc
+bae.mysqldb=huixinpn
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sqld.duapp.com:4050/${bae.mysqldb}
+spring.datasource.url=jdbc:mysql://mysql56.rdsm5vw05qyqn8q.rds.bj.baidubce.com:3306/${bae.mysqldb}
 spring.datasource.username=${bae.appid}
 spring.datasource.password=${bae.secretkey}
 spring.datasource.test-on-borrow=true
