--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -7,3 +7,6 @@ baidu.accessKey=9OLicojAlA50C2GqGIxNzvTN
 baidu.secretKey=2YSGemQjeWijKGP2WcUQYQWqpAGquLKR
 baidu.endPoint=http://bj.bcebos.com
 baidu.bucket=huixinpn
+
+multipart.maxFileSize= 25000000
+multipart.maxRequestSize= 25000000
