extract first image appears in article body as its cover

--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -105,6 +105,16 @@
 	<build>
 		<finalName>dionysus</finalName>
 		<plugins>
+		  <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <jvmArguments>
+            -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+          </jvmArguments>
+        </configuration>
+      </plugin>
+		  
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
