--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -11,6 +11,7 @@
     "froala": "~1.2.6",
     "semantic-ui": "~1.11.6",
     "toastr": "~2.1.1",
-    "datetimepicker": "git://github.com/xdan/datetimepicker.git"
+    "datetimepicker": "git://github.com/xdan/datetimepicker.git",
+    "flexslider": "git://github.com/woothemes/FlexSlider.git"
   }
 }
