rename domain and split data.sql

--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -10,3 +10,4 @@ baidu.bucket=huixinpn
 
 multipart.maxFileSize= 25000000
 multipart.maxRequestSize= 25000000
+spring.datasource.data=classpath:/data.sql,classpath:/psychtest.sql
