--- a/dionysus-core/src/main/resources/application.properties
+++ b/dionysus-core/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.data=classpath:/data.sql,classpath:/psychtest.sql
 logging.level.org.springframework=INFO
