--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -13,7 +13,8 @@
     "toastr": "~2.1.1",
     "datetimepicker": "~2.4.3",
     "flexslider": "*",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "handlebars": "~1.3.0"
   },
   "resolutions": {
     "underscore": ">=1.7.0"
