--- a/dionysus-client/yo/package.json
+++ b/dionysus-client/yo/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jade-handlebars": "^0.1.2",
     "grunt-newer": "^0.7.0",
     "grunt-rev": "^0.1.0",
     "grunt-svgmin": "^0.4.0",
