--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -38,6 +38,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.huixinpn.dionysus</groupId>
             <artifactId>dionysus-core</artifactId>
             <version>${project.version}</version>
