--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -15,7 +15,8 @@
     "flexslider": "*",
     "underscore": "~1.8.3",
     "handlebars": "~1.3.0",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "marionette.backbone.syphon": "~0.6.0"
   },
   "resolutions": {
     "underscore": ">=1.7.0"
