--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -16,7 +16,8 @@
     "underscore": "~1.8.3",
     "handlebars": "~1.3.0",
     "fontawesome": "~4.3.0",
-    "marionette.backbone.syphon": "~0.6.0"
+    "marionette.backbone.syphon": "~0.6.0",
+    "twbs-pagination": "~1.2.5"
   },
   "resolutions": {
     "underscore": ">=1.7.0"
