--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -20,6 +20,7 @@
     "twbs-pagination": "~1.2.5"
   },
   "resolutions": {
-    "underscore": ">=1.7.0"
+    "underscore": ">=1.7.0",
+    "jquery": ">=1.11.3"
   }
 }
