--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -12,15 +12,15 @@
     "semantic-ui": "~1.11.6",
     "toastr": "~2.1.1",
     "datetimepicker": "~2.4.3",
-    "flexslider": "*",
     "handlebars": "~1.3.0",
     "fontawesome": "~4.3.0",
     "marionette.backbone.syphon": "~0.6.0",
     "twbs-pagination": "~1.2.5",
-    "fullpage.js": "~2.6.5"
+    "fullpage.js": "~2.6.5",
+    "flexslider": "~2.5.0"
   },
   "resolutions": {
     "underscore": ">=1.7.0",
-    "jquery": ">=1.11.3"
+    "jquery": "^1.8.0 || ^2.0.0"
   }
 }
