prepare for themes

--- a/dionysus-client/theme.config
+++ b/dionysus-client/theme.config
@@ -76,7 +76,7 @@
 *******************************/
 
 /* Path to theme packages */
-@themesFolder : 'bower_components/semantic-ui/src/themes/';
+@themesFolder : 'app/themes/';
 
 /* Path to site override folder */
 @siteFolder  : 'app/styles/site/';
