--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 management.context-path=/actuator
 management.security.enabled=false
 spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.data=classpath:/data.sql,classpath:/psychtest.sql
 spring.main.show_banner=false
 
 baidu.accessKey=9OLicojAlA50C2GqGIxNzvTN
@@ -10,4 +11,5 @@ baidu.bucket=huixinpn
 
 multipart.maxFileSize= 25000000
 multipart.maxRequestSize= 25000000
-spring.datasource.data=classpath:/data.sql,classpath:/psychtest.sql
+
+logging.level.org.springframework=INFO
