--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -17,7 +17,8 @@
     "fullpage.js": "~2.6.5",
     "flexslider": "~2.5.0",
     "backbone.paginator": "~2.0.2",
-    "pure": "~0.6.0"
+    "pure": "~0.6.0",
+    "jplayer": "~2.9.2"
   },
   "resolutions": {
     "underscore": ">=1.7.0",
