--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -41,7 +41,7 @@
 				</configuration>
 				<executions>
 					<execution>
-					  <phase>compile</phase>
+					  <phase>prepare-package</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
