--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -14,13 +14,13 @@
     "datetimepicker": "~2.4.3",
     "marionette.backbone.syphon": "~0.6.0",
     "twbs-pagination": "~1.2.5",
-    "fullpage.js": "~2.6.5",
     "flexslider": "~2.5.0",
     "backbone.paginator": "~2.0.2",
-    "pure": "~0.6.0",
     "jplayer": "~2.9.2",
     "sockjs-client": "~1.0.0",
-    "stomp-websocket": "~2.3.4"
+    "stomp-websocket": "~2.3.4",
+    "jquery.tagsinput": "~1.3.6",
+    "jquery-autocomplete": "~1.1.1"
   },
   "resolutions": {
     "underscore": ">=1.7.0",
