--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
 
     <dependency>
       <groupId>org.reflections</groupId>
