add psychtest evaluation test case

--- a/dionysus-webapp/src/test/resources/application-test.properties
+++ b/dionysus-webapp/src/test/resources/application-test.properties
@@ -1,2 +1,8 @@
 spring.jpa.database: h2
 spring.jpa.show-sql: true
+spring.datasource.data=classpath:/data.sql,classpath:/psychtest.sql
+
+baidu.accessKey=9OLicojAlA50C2GqGIxNzvTN
+baidu.secretKey=2YSGemQjeWijKGP2WcUQYQWqpAGquLKR
+baidu.endPoint=http://bj.bcebos.com
+baidu.bucket=huixinpn
