--- a/dionysus-psychtest/pom.xml
+++ b/dionysus-psychtest/pom.xml
@@ -47,5 +47,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-json-org</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 	</dependencies>
 </project>
